--- a/Final Project/platformio.ini
+++ b/Final Project/platformio.ini
@@ -12,4 +12,6 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-lib_deps = arduino-libraries/Servo@^1.1.8
+lib_deps = 
+	arduino-libraries/Servo@^1.1.8
+	fmalpartida/LiquidCrystal@^1.5.0
